--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@
         var speech = new SpeechSynthesisUtterance();
 
         // Set the text to be spoken
-        speech.text = username + " bhai ke aage koi bol sakta hai kya " +"aieaieaieaieaieaieaieaieiaeaieaieaieaiea" + username + " bhai ";
+        speech.text = username + " bhai ke aage koi bol sakta hai kya " +"aeae" + username + " bhai ";
 
         // Set the language for speech
         speech.lang = language;
